--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -9,7 +9,7 @@
 
     section {
         width: 100%;
-        min-height: 700px;
+        min-height: 850px;
     }
 
     .pattern {
@@ -29,4 +29,18 @@
         background: url(https://media.geeksforgeeks.org/wp-content/uploads/20200326181026/wave3.png);
         background-size: cover;
         background-repeat: no-repeat;
+    }
+
+
+    @media only screen and (max-width:768px) {
+        section{
+            min-height: 1100px;
+        }
+
+    }
+    @media only screen and (min-width:769px) and (max-width:1280px) {
+        section{
+            min-height: 700px;
+        }
+
     }
