--- a/src/Components/ContactMe/ContactMe.css
+++ b/src/Components/ContactMe/ContactMe.css
@@ -9,3 +9,110 @@
     padding: 10px;
 
 }
+.wrapper .button{
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    float: left;
+    overflow: hidden;
+    margin: 0 5px;
+    background: red;
+    border-radius: 50px;
+    background: #fff;
+    cursor: pointer;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-out;
+
+}
+.wrapper .button:hover{
+    width: 200px;
+}
+
+.wrapper .button .icon{
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    border-radius: 50px;
+    box-sizing: border-box;
+    line-height: 60px;
+    text-align: center;
+    transition: all 0.3s ease-out;
+}
+.wrapper .button:nth-child(1) .icon{
+    background-color: #4267B2;
+
+}
+.wrapper .button:nth-child(2) .icon{
+
+    background-color: #0a66c2;
+
+}
+.wrapper .button:nth-child(3) .icon{
+    background-color: #1DA1F2;
+
+}
+.wrapper .button:nth-child(4) .icon{
+    background-color: #E1306C;
+
+}
+.wrapper .button:nth-child(5) .icon{
+    background-color: black
+
+}
+.wrapper .button:nth-child(6) .icon{
+    background-color:  #ff0000;;
+
+}
+.wrapper .button:nth-child(1):hover .icon{
+    background-color: #4267B2;
+
+}
+
+.wrapper .button .icon i{
+    font-size: 25px;
+    line-height: 60px;
+    transition: all 0.3s ease-out;
+}
+.wrapper .button .icon i{
+color: #fff;
+}
+.wrapper .button span {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 60px;
+    margin-left: 10px;
+
+}
+.wrapper .button a{
+    text-decoration: none;
+}
+
+.wrapper .button:nth-child(1) span{
+    color: #4267B2;
+
+}
+.wrapper .button:nth-child(2) span{
+
+    color: #0a66c2;
+
+}
+.wrapper .button:nth-child(3) span{
+    color: #1DA1F2;
+
+}
+.wrapper .button:nth-child(4) span{
+    color: #E1306C;
+
+}
+.wrapper .button:nth-child(5) span{
+    color: black
+
+}
+.wrapper .button:nth-child(6) span{
+    color:  #ff0000;;
+
+}
+.wrapper .button:nth-child(1):hover span{
+    color: #4267B2;
+
+}
